--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,13 @@
   "dependencies": {
     "angular": "~1.2.22",
     "sly": "~1.2.3",
-    "jquery": "~2.1.1"
+    "jquery": "~2.1.1",
+    "bootstrap": "~3.3.2",
+    "jquery-ui": "~1.11.2",
+    "angular-route": "~1.3.11"
+  },
+  "resolutions": {
+    "angular": "1.3.11",
+    "angular-route": "~1.2.28"
   }
 }
