--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
   "name": "angular-sly",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "authors": [
-    "gigerbytes <bryan@gigerbyt.es>"
+    "gigerbytes <gigerbytes@gmail.com>"
   ],
   "description": "Angular directives for the sly library",
   "moduleType": [
@@ -23,15 +23,15 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.2.22",
+    "angular": "~1.5.5",
     "sly": "~1.2.3",
-    "jquery": "~2.1.1",
+    "jquery": "~2.2.3",
     "bootstrap": "~3.3.2",
     "jquery-ui": "~1.11.2",
-    "angular-route": "~1.3.11"
+    "angular-route": "~1.5.5"
   },
   "resolutions": {
-    "angular": "1.3.11",
+    "angular": "1.3.20",
     "angular-route": "~1.2.28"
   }
 }
