--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "angular-sly",
   "version": "0.1.3",
   "authors": [
-    "gigerbytes <gigerbytes@gmail.com>"
+    "gigerbytes <gigbytes@protonmail.com>"
   ],
   "description": "Angular directives for the sly library",
   "moduleType": [
